--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,15 @@
        		 <groupId>org.springframework.boot</groupId>
        		 <artifactId>spring-boot-starter-security</artifactId>
    		 </dependency>
+   		 <dependency>
+   			<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-oauth2-client</artifactId>
+   			<version>5.7.5</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-oauth2-jose</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
